[project]
name = "llm-bridge-prod"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fregean", email = "yeshooah@gmail.com" }
]
dependencies = [
    "datasets>=3.6.0",
    "hf-transfer>=0.1.9",
    "hydra-core>=1.3.2",
    "jupyterlab>=4.4.2",
    "matplotlib>=3.10.3",
    "ollama>=0.4.8",
    "openai>=1.79.0",
    "python-dotenv>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_bridge_prod"]
